--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css\bootstrap-grid.css">
-    <link rel="stylesheet" href="css\bootstrap-utilities.css">
+    <!-- <link rel="stylesheet" href="css\bootstrap-grid.css">
+    <link rel="stylesheet" href="css\bootstrap-utilities.css"> -->
     <link rel="stylesheet" href="css\estilo.css">
-    <title>Assistência tecnica</title>
+    <title>Byte Amigo</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body class="fonte">
     <nav class="navbar bg-body-tertiary navbarkk">
@@ -28,17 +29,17 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/carrossel/img1.PNG" class="d-block w-100" alt="...">
+            <img src="./img/carrossel/img1.PNG" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Bem Vindo a Byte amigo!</h5>
+              <h5 class="titulocar">Bem Vindo a Byte amigo!</h5>
               <p class="textosec"> Estamos aqui para ajudar com todas as suas necessidades de tecnologia. Conte conosco para manter seus dispositivos sempre funcionando! </p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="./img/carrossel/img2.PNG" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h5 class="titulocar">Atendimento Rapido</h5>
+              <p class="textosec">Valorizamos o seu tempo! Nossa assistencia tecnica se compromete a oferecer um atendimento agil, reduzindo o tempo de espera e proporcionando solucoes rapidas.</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -62,9 +63,7 @@
 
 
 
-
-
-
- <script src="script/script.js"></script>   
+ 
+ <script src="js/bootstrap.bundle.js"></script>   
 </body>
 </html>
