--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./img/carrossel/img1.PNG" class="d-block w-100" alt="...">
+            <img src="./img/carrossel/img1.PNG" class="d-block w-100" alt="..." height="100%" width="600%">
             <div class="carousel-caption d-none d-md-block">
               <h5 class="titulocar">Bem Vindo a Byte amigo!</h5>
               <p class="textosec"> Estamos aqui para ajudar com todas as suas necessidades de tecnologia. Conte conosco para manter seus dispositivos sempre funcionando! </p>
