--- a/index.html
+++ b/index.html
@@ -23,47 +23,58 @@
 
       <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./img/carrossel/img1.PNG" class="d-block w-100" alt="..." height="100%" width="600%">
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="titulocar">Bem Vindo a Byte amigo!</h5>
-              <p class="textosec"> Estamos aqui para ajudar com todas as suas necessidades de tecnologia. Conte conosco para manter seus dispositivos sempre funcionando! </p>
+            <div class="carousel-item active">
+                <div class="image-container">
+                    <img src="./img/carrossel/img1.webp" class="d-block w-100 imgbanner" alt="...">
+                    <div class="mask"></div>
+                </div>
+                <div class="carousel-caption d-none d-md-block">
+                    <h5 class="titulocar fade-in">Bem Vindo a Byte amigo!</h5>
+                    <p class="textosec fade-in"> Estamos aqui para ajudar com todas as suas necessidades de tecnologia. Conte conosco para manter seus dispositivos sempre funcionando! </p>
+                </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./img/carrossel/img2.PNG" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="titulocar">Atendimento Rapido</h5>
-              <p class="textosec">Valorizamos o seu tempo! Nossa assistencia tecnica se compromete a oferecer um atendimento agil, reduzindo o tempo de espera e proporcionando solucoes rapidas.</p>
+            <div class="carousel-item">
+                <div class="image-container">
+                    <img src="./img/carrossel/img2.PNG" class="d-block w-100 imgbanner" alt="...">
+                    <div class="mask"></div>
+                </div>
+                <div class="carousel-caption d-none d-md-block">
+                    <h5 class="titulocar fade-in">Atendimento Rapido</h5>
+                    <p class="textosec fade-in">Valorizamos o seu tempo! Nossa assistencia tecnica se compromete a oferecer um atendimento agil, reduzindo o tempo de espera e proporcionando solucoes rapidas.</p>
+                </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+            <div class="carousel-item">
+                <div class="image-container">
+                    <img src="./img/carrossel/img3.jpg" class="d-block w-100 imgbanner" alt="...">
+                    <div class="mask"></div>
+                </div>
+                <div class="carousel-caption d-none d-md-block">
+                    <h5 class="titulocar fade-in">Third slide label</h5>
+                    <p class="textosec fade-in">Some representative placeholder content for the third slide.</p>
+                </div>
             </div>
-          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
         </button>
-      </div>
+    </div>
+    
 
 
 
 
- 
- <script src="js/bootstrap.bundle.js"></script>   
+  <script src="js/bootstrap.bundle.js"></script>
+  <script src="js/script.js"></script>   
+
 </body>
 </html>
