--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="image-container">
-                    <img src="./img/carrossel/img1.webp" class="d-block w-100 imgbanner" alt="...">
+                    <img src="./img/carrossel/img1.png" class="d-block w-100 imgbanner1" alt="...">
                     <div class="mask"></div>
                 </div>
                 <div class="carousel-caption d-none d-md-block">
@@ -40,7 +40,7 @@
             </div>
             <div class="carousel-item">
                 <div class="image-container">
-                    <img src="./img/carrossel/img2.PNG" class="d-block w-100 imgbanner" alt="...">
+                    <img src="./img/carrossel/img2.png" class="d-block w-100 imgbanner1" alt="...">
                     <div class="mask"></div>
                 </div>
                 <div class="carousel-caption d-none d-md-block">
@@ -50,7 +50,7 @@
             </div>
             <div class="carousel-item">
                 <div class="image-container">
-                    <img src="./img/carrossel/img3.jpg" class="d-block w-100 imgbanner" alt="...">
+                    <img src="./img/carrossel/img3.PNG" class="d-block w-100 imgbanner" alt="...">
                     <div class="mask"></div>
                 </div>
                 <div class="carousel-caption d-none d-md-block">
