--- a/home.html
+++ b/home.html
@@ -19,8 +19,9 @@
             <p>Seja bem-vindo a Byte Amigo.</p>
             <p>Aqui valorizamos voce, e sua satisfacao</p>
             <a href="suporte.html" class="btn-contrate">Contrate-nos</a>
+            <a href="editcar.html" class="btn-contrate">perfil</a>
         </div>
     </section>
->
+>       
 </body>
 </html>
