--- a/pay.html
+++ b/pay.html
@@ -33,10 +33,10 @@
             <div id="cvv-error" class="input_error hidden">cvv invalido</div>
         </div>
         <button class="button" id="card-button">
-            <span>pagar com cartao</span>
+            <a href="completed.html">pagar com cartao</a> 
         </button>
         <button class="button" id="paypal-button">
-            <span>pagar com pix</span>
+            <a href="pix.html">pagar com pix</a>
         </button>
         <div class="footer">
         </div>
