--- a/suporte.html
+++ b/suporte.html
@@ -36,7 +36,7 @@
                     
                     <textarea id="descricao" name="descricao" placeholder="Descreva com detalhes seu problema"></textarea>
                     
-                    <button type="submit">ENVIAR</button>
+                    <a href="gen.html"> <button type="submit">ENVIAR</button></a>
                 </div>
             </div>
         </div>
