--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
                 <div class="tamimg"><img src="./img/servicos/manutencao1.png" alt="Manutencao de infraestrutura"></div>
                 <h3>Manutencao de infraestrutura </h3>
                 
-                <p>Reparamos PCs, resolvemos problemas de hardware, software e virus.</p>
+                <p>Cuidamos de redes, servidores e sistemas para garantir tudo funcionando.</p>
             </div>
 
             <div class="service-item slide-up">
                 <div class="icon"><img src="./img/LOGO/computer.png" alt="Manutencao de PCs"></div>
                 <h3>Manutencao de PCs</h3>
-                <p>Cuidamos de redes, servidores e sistemas para garantir tudo funcionando.</p>
+                <p>Reparamos PCs, resolvemos problemas de hardware, software e virus</p>
             </div>
 
             <div class="service-item slide-up ">
@@ -116,6 +116,54 @@
             <img class="image-content slide-left" src="./img/LOGO/eba.png" alt="Equipamentos Cirúrgicos">
         </div>
     </section>
+
+    <div class="wrapper">
+        <div class="container">
+            <input type="radio" name="slide" id="c1" checked>
+            <label for="c1" class="card">
+                <div class="row">
+                    <div class="icon">1</div>
+                    <div class="description">
+                        <h4>Winter</h4>
+                        <p>Winter has so much to offer - 
+                            creative activities</p>
+                    </div>
+                </div>
+            </label>
+            <input type="radio" name="slide" id="c2" >
+            <label for="c2" class="card">
+                <div class="row">
+                    <div class="icon">2</div>
+                    <div class="description">
+                        <h4>Digital Technology</h4>
+                        <p>Gets better every day - 
+                            stay tuned</p>     
+                    </div>
+                </div>
+            </label>
+            <input type="radio" name="slide" id="c3" >
+            <label for="c3" class="card">
+                <div class="row">
+                    <div class="icon">3</div>
+                    <div class="description">
+                        <h4>Globalization</h4>
+                        <p>Help people all over the world </p>
+                    </div>
+                </div>
+            </label>
+            <input type="radio" name="slide" id="c4" >
+            <label for="c4" class="card">
+                <div class="row">
+                    <div class="icon">4</div>
+                    <div class="description">
+                        <h4 style="color: black;">New Technology</h4>
+                        <p>Space engeneering becomes
+                            more and more advance</p>
+                    </div>
+                </div>
+            </label>
+        </div>
+    </div>
     
 
 
