--- a/profile.html
+++ b/profile.html
@@ -11,12 +11,15 @@
         <div class="profile-pic">
             <img id="profileImage" src="./img/foto2.png" alt="Foto de perfil">
         </div>
-        <h1>Cliente</h1>
-        <h2>youemail@exemple.com</h2>
-        <p>bio</p>
-        <button class="edit-btn">Edit profile</button>
     </div>
+    <h1 id="profileName">Kauan Venancio</h1>
+    <h2 id="profileUsername">Vrodrigueskauan</h2>
+    <p id="profileBio">Eu sou Kauan Venancio, aluno da Etec MCM em Ribeirão Pires; Os repositórios desse perfil estão de acordo com as aulas.</p>
+    <a href="edit.html"><button class="edit-btn">Editar perfil</button></a>
+    <a href="home.html"><button class="edit-btn">inicio</button></a>
+</div>
 
-    <script src="./js/jsprof.js"></script>
+<script src="./js/jsprof.js"></script>
+
 </body>
 </html>
