--- a/edit.html
+++ b/edit.html
@@ -13,18 +13,18 @@
             <!-- Pré-visualização da Imagem com Lixeira -->
             <div class="profile-image-container">
                 <img id="profileImagePreview" src="./img/foto1.png" class="profile-edit-img" alt="Imagem de perfil">
-                <label for="profileImage" class="edit-icon">✏️</label>
+                <label for="profileImage" class="edit-icon"><img class="imgedit" src="./img/LOGO/lapis.png" alt=""></label>
                 <input type="file" id="profileImage" accept="image/*" style="display:none;">
                 
                 <!-- Ícone de lixeira para remover imagem -->
-                <img src="./img/trash-icon.png" class="trash-icon" alt="Remover imagem" onclick="removeImage()">
+                <img src="./img/LOGO/lixeira.png" class="trash-icon" alt="Remover imagem" onclick="removeImage()">
             </div>
 
             <!-- Campos de texto para edição -->
             <label for="name">Nome:</label>
             <input type="text" id="name" placeholder="Nome Completo" value="Cliente">
 
-            <label for="username">Usuário:</label>
+            <label for="username">Usuario:</label>
             <input type="text" id="username" placeholder="Nome de Usuário" value="cliente12345">
 
             <label for="bio">Biografia:</label>
